<resources>
    <string name="app_name">Taipei MRT Taxi Go</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="account">Account:</string>
    <string name="normal_taxi">Normal Taxi\nRight-on-time Calling</string>
    <string name="accessibility_taxi">Accessibility Taxi\nReservation Service</string>
    <string name="placeholder_destination">Select Destination</string>
    <string name="placeholder_origin">Select Origin</string>
    <string name="station_taipei_station">Taipei Main Station</string>
    <string name="station_xinsheng">Zhongxiao Xinsheng</string>
    <string name="minute">minute</string>
    <string name="order">Order</string>
    <string name="hour">hour</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="mrt_time">Time of getting on MRT</string>
    <string name="taxi_time">Time of getting on taxi</string>
    <string name="confirm">Confirm</string>
    <string name="select_station">Select the stations</string>
    <string name="notification_mrt">Remind you 30 minutes before riding MRT</string>
    <string name="notification_taxi">Send a notification when Taxi arrivied</string>
    <string name="reservation">Reservation List</string>
    <string name="reservation_success">Reservation Success</string>
    <string name="notification_on_taxi">Send a notification when customer is on the Taxi</string>
    <string name="notification_taxi_before">Send a notification when Taxi is about to arrived</string>
    <string name="placeholder_station">Select Station</string>
    <string name="call">Call</string>
    <string name="call_success">Call success</string>
    <string name="taxi_plate">Taxi plate number</string>
</resources>
