<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lavMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/ic_app_icon"/>

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TitleViewStyle"
            android:textAlignment="center"
            android:text="@string/app_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="64dp"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="64dp"
            android:text="@string/register" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:src="@drawable/ic_hello"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>