<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/lavMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"

            android:textAppearance="@style/TitleViewStyle" />

        <LinearLayout
            android:id="@+id/lahFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:width="80dp"
                android:gravity="center|right"
                android:text="@string/first_name" />

            <LinearLayout
                android:id="@+id/lavFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/hitFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/HintTextViewStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvLastName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:width="80dp"
                android:gravity="center|right"
                android:text="@string/last_name" />


            <LinearLayout
                android:id="@+id/lavLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/hitLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/HintTextViewStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvEmail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:width="80dp"
                android:gravity="center|right"
                android:text="@string/email" />



            <LinearLayout
                android:id="@+id/lavEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="example@abc.com"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/hitEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/HintTextViewStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:width="80dp"
                android:gravity="center|right"
                android:text="@string/password" />

            <LinearLayout
                android:id="@+id/lavPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/hitPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/HintTextViewStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvPassword2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:width="80dp"
                android:gravity="center|right"
                android:text="@string/confirm_password" />

            <LinearLayout
                android:id="@+id/lavPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/hitPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HintTextViewStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahBtnGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Space
                android:id="@+id/spc"
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>